# --MouseSpirit

./: .gitignore  DEV_LOG_20240523.md  README.md  copy_jni_commands.sh  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/bluetoothmouse/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/example/bluetoothmouse/: BluetoothActivity.kt  BluetoothDeviceAdapter.kt  CryptoUtils.kt  GameActivity.kt  GlobalContext.kt  HidConstants.kt  HidDeviceHelper.kt  HostDeviceAdapter.kt  MainActivity.kt  MouseTestActivity.kt  NetworkUtils.kt  PairingManager.kt  PreferenceUtils.kt  StreamingActivity.kt
app/src/main/java/com/limelight/: LimeLog.java
app/src/main/java/com/limelight/nvstream/http/: NvHTTP.java
app/src/main/res/layout/: activity_bluetooth.xml  activity_game.xml  activity_main.xml  activity_mouse_test.xml  activity_streaming.xml  item_bluetooth_device.xml  item_host_device.xml
app/src/main/res/menu/: menu_bluetooth.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/bluetoothmouse/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
